include/altdss/capi/alt.h

    ALTDSS_CAPI_DLL int32_t Alt_CE_Get_NumPhases(void* elem);
    ALTDSS_CAPI_DLL int32_t Alt_CE_Get_OCPDeviceType(void* elem);
    ALTDSS_CAPI_DLL void Alt_CE_Get_CurrentsMagAng(double** resultPtr, int32_t *resultDims, void* elem);
    ALTDSS_CAPI_DLL void Alt_CE_Get_VoltagesMagAng(double** resultPtr, int32_t *resultDims, void* elem);
    ALTDSS_CAPI_DLL void Alt_CE_Get_TotalPowers(double** resultPtr, int32_t *resultDims, void* elem);
    ALTDSS_CAPI_DLL altdss_bool_t Alt_CE_Get_IsIsolated(void* elem);
    ALTDSS_CAPI_DLL void Alt_CE_Get_NodeRef(int32_t** resultPtr, int32_t *resultDims, void* elem);
    ALTDSS_CAPI_DLL const char* Alt_CE_Get_DisplayName(void* pce);
    ALTDSS_CAPI_DLL const char* Alt_CE_Get_GUID(void* elem);
    ALTDSS_CAPI_DLL void Alt_CE_Set_DisplayName(void* elem, const char* value);
    ALTDSS_CAPI_DLL double Alt_CE_MaxCurrent(void* elem, int32_t terminalIdx);
    ALTDSS_CAPI_DLL void Alt_PCE_Set_VariableValue(void* pce, int32_t varIdx, double value);
    ALTDSS_CAPI_DLL double Alt_PCE_Get_VariableValue(void* pce, int32_t varIdx);
    ALTDSS_CAPI_DLL const char* Alt_PCE_Get_VariableName(void* pce, int32_t varIdx);
    
    ALTDSS_CAPI_DLL altdss_bool_t Alt_PDE_Get_IsShunt(void* pde);
    ALTDSS_CAPI_DLL double Alt_PDE_Get_AccumulatedL(void* pde);
    ALTDSS_CAPI_DLL double Alt_PDE_Get_Lambda(void* pde);
    ALTDSS_CAPI_DLL int32_t Alt_PDE_Get_NumCustomers(void* pde);
    ALTDSS_CAPI_DLL void* Alt_PDE_Get_ParentPDElement(void* pde);
    ALTDSS_CAPI_DLL int32_t Alt_PDE_Get_TotalCustomers(void* pde);
    ALTDSS_CAPI_DLL int32_t Alt_PDE_Get_FromTerminal(void* pde);
    ALTDSS_CAPI_DLL double Alt_PDE_Get_TotalMiles(void* pde);
    ALTDSS_CAPI_DLL int32_t Alt_PDE_Get_SectionID(void* pde);
    ALTDSS_CAPI_DLL void Alt_LoadShape_Set_Points(void *objPtr, int32_t Npts, void *HoursPtr, void *PMultPtr, void *QMultPtr, altdss_bool_t ExternalMemory, altdss_bool_t IsFloat32, int32_t Stride);