src/CAPI/CAPI_Alt.pas


    iControl := 1;
    repeat
        // cycle through the list of controls until we find a fuse, recloser, or relay
        ctrl := elem.ControlElementList.Get(iControl);
        if ctrl <> NIL then
            case (ctrl.DSSObjType and CLASSMASK) of
                FUSE_CONTROL:
                    Result := iControl;
                RECLOSER_CONTROL:
                    Result := iControl;
                RELAY_CONTROL:
                    Result := iControl;
            end;
        inc(iControl);
    until (iControl > elem.ControlElementList.Count) or (Result > 0);
end;
//------------------------------------------------------------------------------
function Alt_CE_Get_OCPDeviceType(elem: TDSSCktElement): Integer; CDECL;
begin
    Result := GetOCPDeviceType(elem);     // see Utilities.pas
end;
//------------------------------------------------------------------------------
procedure Alt_CE_Get_CurrentsMagAng(var ResultPtr: PDouble; ResultCount: PAPISize; elem: TDSSCktElement); CDECL;
// return currents in magnitude, angle array
var
    Result: PDoubleArray0;
    cBuffer: pComplexArray;
    CMagAng: polar;
    NValues, iV, i: Integer;
begin
    if MissingSolution(elem) then
    begin
        DefaultResult(ResultPtr, ResultCount);
        Exit;
    end;

    NValues := elem.NConds * elem.NTerms;
    Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, 2 * NValues, 2, NValues);
    cBuffer := PComplexArray(ResultPtr);
    elem.GetCurrents(cBuffer);
    iV := 0;
    for i := 1 to NValues do
    begin
        CMagAng := ctopolardeg(cBuffer[i]); // convert to mag/angle
        Result[iV] := CMagAng.mag;
        Inc(iV);
        Result[iV] := CMagAng.ang;
        Inc(iV);
    end;
end;
//------------------------------------------------------------------------------
procedure Alt_CE_Get_VoltagesMagAng(var ResultPtr: PDouble; ResultCount: PAPISize; elem: TDSSCktElement); CDECL;
// Bus Voltages in magnitude, angle at all terminal
var
    Result: PDoubleArray0;
    numcond, i, n, iV: Integer;
    Volts: Polar;
    NodeV: pNodeVArray;
begin
    // Return voltages for all terminals
    if MissingSolution(elem) or (elem.NodeRef = NIL) then
    begin
        DefaultResult(ResultPtr, ResultCount);
        Exit;
    end;
    NodeV := elem.DSS.ActiveCircuit.Solution.NodeV;

    numcond := elem.NConds * elem.Nterms;
    Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, 2 * numcond, 2, numcond);
    // k := (Terminal-1)*numcond;    // RCD 8-30-00 Changed
    iV := 0;
    for i := 1 to numcond do
    begin
        n := elem.NodeRef[i];
        Volts := ctopolardeg(NodeV[n]); // ok if =0
        Result[iV] := Volts.mag;
        Inc(iV);
        Result[iV] := Volts.ang;
        Inc(iV);
    end;
end;
//------------------------------------------------------------------------------
function Alt_CE_Get_IsIsolated(elem: TDSSCktElement): TAPIBoolean; CDECL;
begin
    Result := Flg.IsIsolated in elem.Flags;
end;
//------------------------------------------------------------------------------
procedure Alt_CE_Get_TotalPowers(var ResultPtr: PDouble; ResultCount: PAPISize; elem: TDSSCktElement); CDECL;
var
    cBuffer: pComplexArray;
    myInit,
    myEnd,
    j,
    i,
    iV: Integer;
    buffer: Array of Complex;
    Result: PDoubleArray0;
begin
    if MissingSolution(elem) or (elem.NodeRef = NIL) then
    begin
        DSS_RecreateArray_PDouble(ResultPtr, ResultCount, 2);
        Exit;
    end;

    Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, 2 * elem.Nterms);
    cBuffer := Allocmem(2 * SizeOf(Double) * elem.NConds * elem.Nterms);
    elem.GetPhasePower(cBuffer);
    iV := 0;
    SetLength(buffer, elem.Nterms);
    for j := 1 to elem.Nterms do
    Begin
        buffer[j - 1] := 0;
        myInit := (j - 1) * elem.NConds + 1;
        myEnd := elem.NConds * j;
        for i := myInit to myEnd do
        begin
            buffer[j - 1] := buffer[j - 1] + cBuffer[i];
        end;
        Result[iV + 0] := buffer[j - 1].re * 0.001;
        Result[iV + 1] := buffer[j - 1].im * 0.001; 
        Inc(iV, 2);
    End;
    Reallocmem(cBuffer,0);
end;
//------------------------------------------------------------------------------
procedure Alt_CE_Get_NodeRef(var ResultPtr: PInteger; ResultCount: PAPISize; elem: TDSSCktElement); CDECL;    
begin
    DefaultResult(ResultPtr, ResultCount);
    if elem.NodeRef = NIL then
    begin
        if DSS_CAPI_EXT_ERRORS then
        begin
            DoSimpleMsg(elem.DSS, _('NodeRef is not populated for the current element!'), 97801);
        end;
        Exit;
    end;
    DSS_RecreateArray_PInteger(ResultPtr, ResultCount, elem.Yorder);
    Move(elem.NodeRef[1], ResultPtr^, elem.Yorder * SizeOf(Integer));
end;
//------------------------------------------------------------------------------
function Alt_CE_MaxCurrent(obj: TDSSCktElement; terminalIdx: Integer): Double; CDECL;
begin
    Result := obj.MaxCurrent[terminalIdx];
end;
//------------------------------------------------------------------------------
function Alt_PCE_Get_VariableName(elem: TPCElement; varIdx: Integer): PAnsiChar; CDECL;
begin
    Result := NIL;
    if (varIdx <= 0) or (varIdx > elem.NumVariables) then
    begin
        DoSimpleMsg(elem.DSS, 'Invalid variable index %d for "%s"', [varIdx, elem.FullName], 97802);
        Exit;
    end;
    Result := DSS_GetAsPAnsiChar(elem.DSS, elem.VariableName(varIdx));
end;
//------------------------------------------------------------------------------
function Alt_PCE_Get_VariableValue(elem: TPCElement; varIdx: Integer): Double; CDECL;
begin
    Result := 0;
    if (varIdx <= 0) or (varIdx > elem.NumVariables) then
    begin
        DoSimpleMsg(elem.DSS, 'Invalid variable index %d for "%s"', [varIdx, elem.FullName], 100002);
        Exit;
    end;
    Result := elem.Variable[varIdx];
end;
//------------------------------------------------------------------------------
procedure Alt_PCE_Set_VariableValue(elem: TPCElement; varIdx: Integer; Value: Double); CDECL;
begin
    if (varIdx <= 0) or (varIdx > elem.NumVariables) then
    begin
        if DSS_CAPI_EXT_ERRORS then
            DoSimpleMsg(elem.DSS, 'Invalid variable index %d for "%s"', [varIdx, elem.FullName], 100002);
        Exit;
    end;
    elem.Variable[varIdx] := Value;
end;
//------------------------------------------------------------------------------
function Alt_CE_Get_NumPhases(elem: TDSSCktElement): Integer; CDECL;
begin
    Result := elem.NPhases
end;
//------------------------------------------------------------------------------
function Alt_CE_Get_Name(elem: TDSSCktElement): PAnsiChar; CDECL;
begin
    Result := DSS_GetAsPAnsiChar(elem.DSS, elem.FullName);
end;
//------------------------------------------------------------------------------
function Alt_CE_Get_DisplayName(elem: TDSSCktElement): PAnsiChar; CDECL;
begin
    if elem.DisplayName <> '' then
        Result := DSS_GetAsPAnsiChar(elem.DSS, elem.DisplayName)
    else
        Result := DSS_GetAsPAnsiChar(elem.DSS, elem.ParentClass.Name + '_' + elem.Name);
end;
//------------------------------------------------------------------------------
function Alt_CE_Get_GUID(elem: TDSSCktElement): PAnsiChar; CDECL;
begin
    Result := DSS_GetAsPAnsiChar(elem.DSS, elem.ID)
end;
//------------------------------------------------------------------------------
procedure Alt_CE_Set_DisplayName(elem: TDSSCktElement; const Value: PAnsiChar); CDECL;
begin
    elem.DisplayName := Value;
end;
//------------------------------------------------------------------------------
function Alt_PDE_Get_IsShunt(elem: TPDElement): TAPIBoolean; CDECL;
begin
    Result := elem.IsShunt;
end;
//------------------------------------------------------------------------------
function Alt_PDE_Get_AccumulatedL(elem: TPDElement): Double; CDECL;
begin
    Result := elem.AccumulatedBrFltRate;
end;
//------------------------------------------------------------------------------
function Alt_PDE_Get_Lambda(elem: TPDElement): Double; CDECL;
begin
    Result := elem.BranchFltRate;
end;
//------------------------------------------------------------------------------
function Alt_PDE_Get_NumCustomers(elem: TPDElement): Integer; CDECL;
begin
    Result := elem.BranchNumCustomers;
end;
//------------------------------------------------------------------------------
function Alt_PDE_Get_ParentPDElement(elem: TPDElement): TPDElement; CDECL;
begin
    Result := elem.ParentPDElement;
end;
//------------------------------------------------------------------------------
function Alt_PDE_Get_TotalCustomers(elem: TPDElement): Integer; CDECL;
begin
    Result := elem.BranchTotalCustomers;
end;
//------------------------------------------------------------------------------
function Alt_PDE_Get_FromTerminal(elem: TPDElement): Integer; CDECL;
begin
    Result := elem.FromTerminal;
end;
//------------------------------------------------------------------------------
function Alt_PDE_Get_TotalMiles(elem: TPDElement): Double; CDECL;
// Total miles of line from here on down to the end of the feeder
begin
    Result := elem.AccumulatedMilesDownStream;
end;
//------------------------------------------------------------------------------
function Alt_PDE_Get_SectionID(elem: TPDElement): Integer; CDECL;
begin
    Result := elem.BranchSectionID;
end;
//------------------------------------------------------------------------------
procedure Alt_LoadShape_Set_Points(elem: TLoadshapeObj; Npts: TAPISize; HoursPtr: Pointer; PMultPtr: Pointer; QMultPtr: Pointer; ExternalMemory: TAPIBoolean; IsFloat32: TAPIBoolean; Stride: Integer); CDECL;
begin
    // If the LoadShape owns the memory, dispose the current data and reallocate if necessary
    if not elem.ExternalMemory then
    begin
        ReallocMem(elem.dP, 0);
        ReallocMem(elem.dQ, 0);
        ReallocMem(elem.dH, 0);
        ReallocMem(elem.sP, 0);
        ReallocMem(elem.sQ, 0);
        ReallocMem(elem.sH, 0);
    end;
    elem.dP := NIL;
    elem.dQ := NIL;
    elem.dH := NIL;
    elem.sP := NIL;
    elem.sQ := NIL;
    elem.sH := NIL;
    
    elem.ExternalMemory := ExternalMemory;
    elem.NumPoints := Npts;

    if not ExternalMemory then
    begin
        elem.Stride := 1;
        if not IsFloat32 then
        begin
            if PMultPtr <> NIL then
            begin
                ReallocMem(elem.dP, Sizeof(Double) * Npts);
                Move(PMultPtr^, elem.dP[0], Npts * SizeOf(Double));
            end;
            if QMultPtr <> NIL then
            begin
                ReallocMem(elem.dQ, Sizeof(Double) * Npts);
                Move(QMultPtr^, elem.dQ[0], Npts * SizeOf(Double));
            end;
            if HoursPtr <> NIL then
            begin
                ReallocMem(elem.dH, Sizeof(Double) * Npts);
                Move(HoursPtr^, elem.dH[0], Npts * SizeOf(Double));
            end;
            if Assigned(elem.dP) then
                elem.SetMaxPandQ;
        end
        else // if IsFloat32
        begin
            if PMultPtr <> NIL then
            begin
                ReallocMem(elem.sP, Sizeof(Single) * Npts);
                Move(PMultPtr^, elem.sP[0], Npts * SizeOf(Single));
            end;
            if QMultPtr <> NIL then
            begin
                ReallocMem(elem.sQ, Sizeof(Single) * Npts);
                Move(QMultPtr^, elem.sQ[0], Npts * SizeOf(Single));
            end;
            if HoursPtr <> NIL then
            begin
                ReallocMem(elem.sH, Sizeof(Single) * Npts);
                Move(HoursPtr^, elem.sH[0], Npts * SizeOf(Single));
            end;
            if Assigned(elem.sP) then
                elem.SetMaxPandQ;
        end;
        Exit;
    end;
